# SLURM_Job_Monitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
slurm-monitor-rs/src/: cli.rs
slurm-monitor-rs/src/ui/: render.rs
src/: cli.rs  job_manager.rs  log_tailer.rs  main.rs  status_monitor.rs  utils.rs
src/ui/: app.rs  mod.rs  render.rs
