[package]
name = "lazyslurm"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for real-time monitoring of SLURM jobs"
authors = ["lazyslurm Contributors"]
license = "MIT"

[[bin]]
name = "lazyslurm"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# File watching
notify = "6.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
tempfile = "3.24.0"
